--- a/_posts/第一份简历.md
+++ b/_posts/第一份简历.md
@@ -1,7 +1,20 @@
+---
+layout:     post
+title:      第一份简历
+subtitle:   函数式编程框架 ReactiveCocoa 进阶
+date:       2017-08-13
+author:     Joy
+header-img: img/post-bg-people.jpg
+catalog: true
+tags:
+    - 面试
+    - 简历 
+---
+
 ## 个人信息
 
-- 周毅 / 男 / 1993
-- 手机：18010526842      电子邮箱：joy060102@gmail.com
+- 周毅 / 男 / 199x
+- 手机：180105xxxxxx      电子邮箱：joy060102@gmail.com
 - 毕业院校：电子科技大学/通信工程学院/网络工程   本科
 - 毕业时间：2015年6月
 
