--- a/_posts/2016-08-13-第一份简历.md
+++ b/_posts/2016-08-13-第一份简历.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      第一份简历
-subtitle:   函数式编程框架 ReactiveCocoa 进阶
+subtitle:   
 date:       2017-08-13
 author:     Joy
 header-img: img/post-bg-people.jpg
