--- a/_posts/2016-08-13-第一份简历.md
+++ b/_posts/2016-08-13-第一份简历.md
@@ -4,7 +4,7 @@ title:      第一份简历
 subtitle:   
 date:       2017-08-13
 author:     Joy
-header-img: img/post-bg-people.jpg
+header-img: img/page-bg-people.jpg
 catalog: true
 tags:
     - 面试
