--- a/_posts/2017-08-24-项目知识点.md
+++ b/_posts/2017-08-24-项目知识点.md
@@ -57,3 +57,91 @@ Android提供了android.net.wifi包，让开发者可以方便的管理设备底
 | [WifiManager.WifiLock](https://developer.android.com/reference/android/net/wifi/WifiManager.WifiLock.html) | Allows an application to keep the Wi-Fi radio awake. |
 | [WifiManager.WpsCallback](https://developer.android.com/reference/android/net/wifi/WifiManager.WpsCallback.html) | Interface for callback invocation on a start WPS action |
 | [WpsInfo](https://developer.android.com/reference/android/net/wifi/WpsInfo.html) | A class representing Wi-Fi Protected Setup |
+
+
+
+##### Android 中的 Context 详解
+
+```
+Interface to global information about an application environment.This is an abstract class whose implementation is provided by the Android system. It allows access to application-specific resources and classes, as well as up-calls for application-level operations such as launching activities, broadcasting and receiving intents.
+```
+
+Context 是一个抽象类，下面看几个该类的实现，它们之间的关系如图：
+
+![](post-androidcontext.png)
+
+* ContextImpl ，给Activity以及其他的组件提供context对象
+
+```
+class ContextImpl extends Context {
+    // 所有Application 程序共用一个mPackageInfo对象
+    ActivityThread.PackageInfo mPackageInfo;
+    
+    @Override
+    public Object getSystemService(String name) {
+        ...
+        else if (ACTIVITY_SERVICE.equals(name)) {
+          	return getActivityManager();
+        }
+        else if (INPUT_METHOD_SERVICE.equals(name)) {
+           	return InputMethodManager.getInstance(this);
+        }
+    }
+    
+    @Override
+    public void startActivity(Intent intent) {
+      	mMainThread.getInstrumentation().execStartActivity(
+      		getOuterContext(),
+      		mMainThread.getApplicationThread(),
+      		null,
+      		null,
+      		intent,
+      		-1,
+      	);
+    }
+}
+```
+
+* ContextWrapper， 
+
+  ```
+  public class ContextWrapper extends Context {
+  	//该属性指向一个ContextImpl实例，一般在创建Application,Service,Activity时赋值
+    	Context mBase; 
+    	
+    	protected void attachBaseContext(Context base) {
+        	if (mBase != null) {
+            	throw new IllegalStateException("Base context already set");
+        	}
+        	mBase = base;
+    	}
+    	
+    	@Override
+    	public void startActivity(Intent intent) {
+        	mBase.startActivity(intent);
+    	}
+  }
+  ```
+
+* ContextThemeWrapper
+
+  ```
+  public class ContextThemeWrapper extends ContextWrapper {
+    	private Context mBase;
+    	
+    	public ContextThemeWrapper(Context base, int themeres) {
+        	super(base);
+        	mBase = base;
+        	mThemeResource = themeres;
+    	}
+    	
+    	@Override
+    	protected void attachBaseContext(Context newBase) {
+        	super.attachBaseContext(newBase);
+        	mBase = newBase;
+    	}
+  }
+  ```
+
+  ​
+
