--- a/_posts/2017-08-24-项目知识点.md
+++ b/_posts/2017-08-24-项目知识点.md
@@ -62,13 +62,11 @@ Android提供了android.net.wifi包，让开发者可以方便的管理设备底
 
 ##### Android 中的 Context 详解
 
-```
-Interface to global information about an application environment.This is an abstract class whose implementation is provided by the Android system. It allows access to application-specific resources and classes, as well as up-calls for application-level operations such as launching activities, broadcasting and receiving intents.
-```
+> Interface to global information about an application environment.This is an abstract class whose implementation is provided by the Android system. It allows access to application-specific resources and classes, as well as up-calls for application-level operations such as launching activities, broadcasting and receiving intents.
 
 Context 是一个抽象类，下面看几个该类的实现，它们之间的关系如图：
 
-![](post-androidcontext.png)
+![](img/post-androidcontext.png)
 
 * ContextImpl ，给Activity以及其他的组件提供context对象
 
