--- a/_posts/2017-08-24-项目知识点.md
+++ b/_posts/2017-08-24-项目知识点.md
@@ -66,7 +66,7 @@ Android提供了android.net.wifi包，让开发者可以方便的管理设备底
 
 Context 是一个抽象类，下面看几个该类的实现，它们之间的关系如图：
 
-![](img/post-androidcontext.png)
+![context]({{BASE_PATH}}/img/post-androidcontext.png)
 
 * ContextImpl ，给Activity以及其他的组件提供context对象
 
