--- a/_posts/2017-08-24-项目知识点.md
+++ b/_posts/2017-08-24-项目知识点.md
@@ -66,39 +66,41 @@ Android提供了android.net.wifi包，让开发者可以方便的管理设备底
 
 Context 是一个抽象类，下面看几个该类的实现，它们之间的关系如图：
 
-![context]({{BASE_PATH}}/img/post-androidcontext.png)
+![context](/img/post-androidcontext.png)
 
 * ContextImpl ，给Activity以及其他的组件提供context对象
 
-```
-class ContextImpl extends Context {
-    // 所有Application 程序共用一个mPackageInfo对象
-    ActivityThread.PackageInfo mPackageInfo;
-    
-    @Override
-    public Object getSystemService(String name) {
-        ...
-        else if (ACTIVITY_SERVICE.equals(name)) {
-          	return getActivityManager();
-        }
-        else if (INPUT_METHOD_SERVICE.equals(name)) {
-           	return InputMethodManager.getInstance(this);
-        }
-    }
-    
-    @Override
-    public void startActivity(Intent intent) {
-      	mMainThread.getInstrumentation().execStartActivity(
-      		getOuterContext(),
-      		mMainThread.getApplicationThread(),
-      		null,
-      		null,
-      		intent,
-      		-1,
-      	);
-    }
-}
-```
+  ```
+  class ContextImpl extends Context {
+      // 所有Application 程序共用一个mPackageInfo对象
+      ActivityThread.PackageInfo mPackageInfo;
+      
+      @Override
+      public Object getSystemService(String name) {
+          ...
+          else if (ACTIVITY_SERVICE.equals(name)) {
+            	return getActivityManager();
+          }
+          else if (INPUT_METHOD_SERVICE.equals(name)) {
+             	return InputMethodManager.getInstance(this);
+          }
+      }
+      
+      @Override
+      public void startActivity(Intent intent) {
+        	mMainThread.getInstrumentation().execStartActivity(
+        		getOuterContext(),
+        		mMainThread.getApplicationThread(),
+        		null,
+        		null,
+        		intent,
+        		-1,
+        	);
+      }
+  }
+  ```
+
+  ​
 
 * ContextWrapper， 
 
