--- a/_posts/2017-08-24-项目知识点.md
+++ b/_posts/2017-08-24-项目知识点.md
@@ -60,7 +60,7 @@ Android提供了android.net.wifi包，让开发者可以方便的管理设备底
 
 
 
-##### Android 中的 Context 详解
+### Android 中的 Context 详解
 
 > Interface to global information about an application environment.This is an abstract class whose implementation is provided by the Android system. It allows access to application-specific resources and classes, as well as up-calls for application-level operations such as launching activities, broadcasting and receiving intents.
 
@@ -143,5 +143,18 @@ Context 是一个抽象类，下面看几个该类的实现，它们之间的关
   }
   ```
 
-  ​
 
+
+##### Context 作用域
+
+* Activity 生成的Context拥有最大的作用域，这个和继承关系相关
+
+##### Context 内存泄漏问题
+
+一般Context造成的内存泄漏，几乎都是当Context销毁的时候，却因为被引用导致销毁失败（如static对象的生命周期比较长，Context和这个关联起来之后，很容易出问题）
+
+正确的使用：
+
+* Application 的 Context能搞定的情况下，且生命周期比较长的对象，优先使用Application的Context
+* 不要让生命周期长于Activity的对象持有Activity引用
+* 尽量不要在Activity中使用非静态内部类，因为非静态内部类会隐士持有外部类实例的引用，如果使用静态内部类，将外部实例引用作为弱引用持有
