--- a/_posts/2017-08-24-网络协议知识点.md
+++ b/_posts/2017-08-24-网络协议知识点.md
@@ -27,7 +27,7 @@ OSI 七层模型
 
 ##### TCP/IP和HTTP协议的关系
 
-> 我们在传输数据时，可以只使用（传输层）TPC/IP协议，但那样的话，如果没有应用层，便无法识别数据内容，如果想要使传输的数据有意义，则必须使用到应用层协议。WEB使用HTTP作为应用层协议以封装HTTP文本信息，然后TCP/IP做传输层协议将它转发到网络上
+> 我们在传输数据时，可以只使用（传输层）TPC/IP协议，但那样的话，如果没有应用层，便无法识别数据内容，如果想要使传输的数据有意义，则必须使用到应用层协议。WEB使用HTTP作为应用层协议以封装HTTP文本信息，然后TCP/IP做传输层协议将它转发到网络上，所以HTTP是建立在TCP之上的。（DNS协议是TCP、UDP都可以）
 
 ##### Socket 是啥
 
@@ -41,10 +41,18 @@ OSI 七层模型
 > * 客户端请求：描述要请求的服务端的套接字，指出服务器的IP和端口号，然后发起请求
 > * 连接确认：服务端收到客户端请求之后，把套接字的描述发给客户端，客户端确认描述之后，双方正式建立连接。服务端继续监听接收其他客户端套接字的连接请求
 
-##### TCP三次握手
+##### TCP建立网络连接的过程（三次握手）
 
 > * Client （syn=j） —> Server
 > * Server (ack=j+1) （syn=k） —> Client
 > * Client （ack=k+1) —> Server
 >
-> 需要注意的是 
+> 与之相关的一些常见的知识点，比如说SYN攻击，一般来说就是攻击者对服务器进行大量不完整的TCP请求（缺少第三步），服务器没有收到客户端第三次反馈，就会处于一个等待的状态，短时间大量未完成的请求让服务器资源耗尽，正常的SYN被丢弃，严重会引起网络堵塞瘫痪。
+>
+> 防范方案：
+>
+> * 过滤
+> * 增加积压
+> * 减少SYN-RECEIVED定时
+> * SYN缓存
+> * 防火墙和代理
