--- a/_posts/2017-08-24-项目知识点.md
+++ b/_posts/2017-08-24-项目知识点.md
@@ -9,10 +9,105 @@ catalog: true
 tags:
     - Linux
 ---
-* 广播通知
-* intent
-* socket 
-* wifi模块编程
+#### 广播通知详解
+
+Broadcast是Android中进程间通信的一种机制，”四大组件“之一的BroadcastReceiver是对发送出来的Broadcast进行过滤、接受和响应的组件。
+
+##### 广播的工作流程
+
+* 发送者将要发送的消息和用于过滤的信息（Action, Category)装入一个Intent对象
+* 通过Context.sendBroadcast()、sendOrderBroadcast()方法把Intent对象以广播形式发送出去
+* 所有注册的BroadcastReceiver会检查注册时的IntentFilter是否与发送的Intent相匹配，若匹配，则调用onReceiver()
+
+##### 概念
+
+* 标准广播
+
+  > 完全异步执行的广播，广播发送之后所有的Receiver会在同一时间接收到这条广播，之间没有先后顺序，效率告，无法被截断
+
+* 有序广播
+
+  > 同步执行的广播，在广播发出之后同一时刻只有一个Receiver能够接收到，优先级高的Receiver会优先接收，当优先级高的Recever的onReceiver()调用之后，广播才会继续传递，且前面的广播接收器可以选择截断广播
+
+* 静态注册
+
+  > 在Manifest文件中使用<receiver>标签声明，并在标签内使用<intent-filter>标签设置过滤器。静态注册的Receiver生命周期伴随整个应用，如果这种方式处理的是系统广播，那么不管应用是否在运行，该广播接收器都能接收到该广播
+
+  实例：
+
+  ```
+  // 创建Receiver
+  public class NormalReceiver extends BroadcastReceiver {
+    	public NormlaReceiver(){}
+    	@Override
+    	public void onReceive(Context context, Intent intent) {
+        	String msg = intent.getStringExtra("Msg");
+        	...
+          // 有序Receiver会在这里对消息进行处理，决定是否继续转发
+          // Bundle bundle = new Bundle();
+         	// bundle.putString("Data", "new msg");
+         	// setResultExtras(bundle);
+    	}
+  }
+  ```
+
+  ```
+  // 发送广播
+  public class MainActivity ... {
+    	private final String NORMAL_ACTION = "com.example.normal.receiver";
+    	...
+    	void sendBroadcast() {
+        	Intent intent = new Intent(NORMAL_ACTION);
+        	intent.putExtra("Msg", "Hi");
+        	sendBroadcast(intent);
+        	// 有序广播调用sendOrderedBroadcast(intent, null);
+    	}
+  }
+  ```
+
+  ```
+  // 注册
+  <application
+  	...
+  	<receiver android:name=".NormalReceiver">
+  		<intent-filter> 
+  		// 有序广播会在<intent-filter android:priority="100"> 填入权重
+  			<action android:name="com.example.normal.receiver"/>
+  			....
+  </application>
+  ```
+
+* 动态注册
+
+  > 在Receiver中定义并设置好一个IntentFilter对象，然后在需要注册的地方调用Context.registerReceiver()方法，调用Context.unregisterReceiver()方法取消注册，不需要在Manifest中声明
+
+* 本地广播
+
+  > 只在应用内传播的广播，没法静态注册
+
+*  私有权限
+
+  > 通过动态注册的Receiver存在一个问题，设备上任何应用都可以监听并触发Receiver。
+  >
+  > 在<receiver>标签中添加android:exported="false"属性来标识仅限内部使用
+
+
+
+#### Android Intent详解
+
+##### Intent 概念
+
+>  intent是一种运行时绑定机制，能再程序运行的过程中连接两个不同的组件，是App之间、App内部组件之间的介质。
+
+##### Intent 属性
+
+* component ：显式
+* action：Manifest中指定，一个intent filter可以有多个action
+* category
+* data：用一个uri对象来表示
+* type
+* extras
+* Flags
 
 #### Android Wi-Fi 编程
 
