--- a/_posts/2017-08-28-项目Tips.md
+++ b/_posts/2017-08-28-项目Tips.md
@@ -18,7 +18,7 @@ tags:
 
 EvnetBus 是一个 Android 事件订阅/发布的框架：
 
-![](img/post-img-eventbus.png)
+![](/img/post-img-eventbus.png)
 
 是Android组件间的通信方案，有以下优势：
 
