--- a/_posts/2017-08-28-项目Tips.md
+++ b/_posts/2017-08-28-项目Tips.md
@@ -244,7 +244,9 @@ public Unbinder bind(final Finder finder, final T target, Object source) {
 * 首先是findRequiredView去找R.id.textView对应的控件
 * 然后castView类型转换把View换成TextView
 
-###注解语法
+
+
+### 注解语法
 
 代码注释除了字面上的用途以外，还为开发者在代码中添加信息提供了一种形式化的方法：
 
@@ -254,7 +256,9 @@ public Unbinder bind(final Finder finder, final T target, Object source) {
 
 ##### 创建一个注解
 
-* ```
+* 注解声明
+
+  ```
   /* @interface用来声明一个注解，其中的每一个方法实际上是声明了一个配置参数
    * 方法名就是参数的名称，返回值类型就是参数的类型
    * 可以通过default来声明参数的默认值
@@ -276,6 +280,9 @@ public Unbinder bind(final Finder finder, final T target, Object source) {
      	int priority() default 0;
    }
   ```
+
+  ​
+
 
 * 读取注解的信息
 
