--- a/_posts/2017-08-28-项目Tips.md
+++ b/_posts/2017-08-28-项目Tips.md
@@ -315,3 +315,41 @@ public Unbinder bind(final Finder finder, final T target, Object source) {
 
   之前的版本不允许在同一个声明式前加注同样的Annotation
 
+
+
+
+#### 项目管理
+
+* 公司内部项目放在Gitlab上管理
+* 只有一个主项目，包含后端代码，客户端代码和前端代码；核心工具类库通过子模块的方式托管在主项目上
+  * 子模块的分支和主项目分支约定一一对应（防止测试分支的子模块被带到线上）
+* 分支管理
+  * **master** 分支用来维护线上的代码
+  * 另外需要一个分支，假设就叫**beta**分支，用来做上线前的测试分支
+  * 除此之外，个人在开发的时候，可以从master或者beta切一个自己的分支，在自己的分支上完成开发任务之后，与beta分支merge
+  * 所有的测试步骤应先在beta上进行（beta在开发的过程中，master可以继续修改，比如有bug紧急线上修改之类的），beta随时与master同步。
+
+
+
+#### 开发、测试、上线流程
+
+* 产品制作版本需求原型
+  * 需求比较复杂的情况下，需要和研发一起讨论原型，弄清楚基本的可行性和大致实现方案
+* 根据原型切分大致的功能模块
+  * 可以在gitlab上开一个项目，使用issue系统来罗列各个模块、相关负责人和任务进度
+  * 研发可以从beta切出自己分支，在自己的分支上完成开发之后，修改模块的进度状态，然后merge回beta
+* 为beta分支搭建测试集群
+  * 尽量保证与线上一模一样的环境，整个测试的流程在beta分支的测试集群上完成
+  * 各个端的API、域名之类的配置与分支匹配
+* 测试、修bug流程
+  * 测试需要罗列测试功能点列表，包括新功能点和老的功能点
+  * 测试过程中遇到的bug，记录到项目的issue系统中，并添加优先级标签（高、中、低）
+  * 研发自己协商认领bug，并标记bug状态（进行中、已处理）和责任人
+  * 测试对已处理的bug再次确认之后，删除issue
+  * 如果需要检查旧版本App的兼容性，需切回上一个版本打包客户端测试
+* 上线流程
+  * beta 分支由测试确定功能点完整、全部已知bug都已处理的情况下，由研发将代码merge到master分支
+  * 从master分支上打包App安装包，测试简单过一下功能性
+  * 提交上线，进程重启后，马上进行线上测试
+  * 测试过程中遇到没法短时间解决的严重bug，需马上回滚到上一个版本，修复之后，重新测试、上线
+
