--- a/_posts/2017-08-23-Linux 链接概念.md
+++ b/_posts/2017-08-23-Linux 链接概念.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      Linux 链接概念
+title:      Linux 归纳
 subtitle:   
 date:       2017-08-23
 author:     Joy
@@ -9,6 +9,7 @@ catalog: true
 tags:
     - Linux
 ---
+
 #### Linux 链接概念
 
 操作系统为解决信息能独立于进程之外被长期储存引入了文件，为了是文件便于分类管理引入了文件夹概念。
