--- a/_posts/2017-08-23-Linux归纳.md
+++ b/_posts/2017-08-23-Linux归纳.md
@@ -45,3 +45,15 @@ Linux下的文件有用户数据和元数据，元数据是文件的附加属性
 * Symbolic Link （符号链接）
 
   > 若文件的用户数据块中存放的内容是另一个文件的路径名指向，则该文件就是软链接。
+
+
+##### 常用命令
+* 查看文件大小 du -h
+* 查看硬盘状态 df -l
+
+##### 查看端口
+* netstat 命令
+> netstat -an | grep 3306
+
+* lsof 命令
+> lsof -i:80
