--- a/_posts/2018-01-24-MySQL 归纳.md
+++ b/_posts/2018-01-24-MySQL 归纳.md
@@ -9,6 +9,12 @@ catalog: 	true
 tags:
     - MySQL
 ---
+#### 装载MySQL 
+* APT
+```
+sudo apt-get update
+sudo apt-get install mysql-server
+```
 
 * 修改root密码
 ```
@@ -25,9 +31,22 @@ GRANT ALL ON *.* TO vee@localhost;
 
 ```
 
+* 添加 "unique"
+```
+ALTER TABLE `t_user` ADD unique(`username`);
+```
+
 * 修改 Table 字符集
 	```
 	ALTER TABLE tbl_name CONVERT TO CHARACTER SET character_name [COLLATE ...]
 	如：ALTER TABLE logtest CONVERT TO CHARACTER SET utf8 COLLATE utf8_general_ci;
 
 	```
+
+* 在创建 Database 的时候就指定字符集
+	```
+	CREATE DATABASE mydatabase CHARACTER SET utf8 COLLATE utf8_general_ci;
+	```
+
+* 查询某张 Table 的记录条数
+	select count(*) from [table_name]
