--- a/_posts/2018-02-24-iOS整理.md
+++ b/_posts/2018-02-24-iOS整理.md
@@ -19,8 +19,13 @@ tags:
 * nonatomic 非原子性访问对于属性赋值的时候不加锁，多线程并发访问会提高性能，如果不加此属性则默认是两个访问方法都未院子型事务访问
 * readonly 	
 * readwrite 
-* unsafe_unretained 和weak类似，声明一个弱引用，但是当引用计数为0时，变量不会自动设置为nil
+* unsafe_unretained 和weak类似，声明一个弱引用，但是当引用计数为0时，变量不会自动设置为nil、
 
+#### @interface 中的大括号和申明@property区别
+* 在大括号内声明的其实就是私有变量
+
+#### #import 和 @class 区别
+> import 会包含这个类的所有信息，包括实体变量和方法，@class只是告诉编译器，后面的是一个类的名称
 #### 方法
 * 成员方法与类方法
 	* 成员方法， 以『-』开头，必须使用对象调用
@@ -46,3 +51,18 @@ tags:
     	}
 	}
 	```
+
+### 自定义控件
+* UIView
+ * CALayer
+ * initWithFrame:(CGRect)frame
+    * 有一种写法
+        ```
+        if (self == [super initWithFrame:frame])
+        ```
+ * 如需对子视图进行重新布局，需要调用layoutSubViews 方法
+    * init初始化不会触发
+    * addSubview会触发
+    * 设置view的frame会触发
+    * 滚动UIScrollerView 会触发
+    * ！！换转Screen会促发
