--- a/_posts/2018-03-06-钱包研发.md
+++ b/_posts/2018-03-06-钱包研发.md
@@ -38,3 +38,54 @@ tags:
 	> m/purpse'/coin_type'/account'/change/address_index
 * HD 钱包生成的过程
 ![img](/img/guide.jpg)
+	* 获取一个助记词
+	* （BIP39）使用 PBKDF2 转化为种子
+	* 种子使用 HMAC-SHA512 生成根私钥
+	* 从该根私钥，导出子私钥（BIP32）其中节点布局由BIP44设置
+* 目前已知以太坊客户端的具体实现：
+	* m/44'/60'/0'/0/x: BIP44，imToken(可以自定义路径)，MetaMask，Jaxx，MyEtherWallet，TREZOR，Exodus
+	* m/44'/60'/x'/0/0: BIP44，KeepKey， MetaMask
+	* m/44'/60'/0'/x: Electrum，Ledger Chrome 
+
+## go-ethereum
+* 完整同步  geth –syncmode full
+* 快速同步  geth –fast –cache 512
+* 开启RPC
+	* 直接开启，默认监听 localhost 8545端口
+	* 自定义 geth --rpc --rpcaddr <ip> --rpcport <portnumber> 
+* 发起RPC 
+	```
+	curl localhost:8545 -X POST --data '{"jsonrpc":"2.0","method":"eth_getTransactionByHash","params":["0x3f23fd13083d11c49b5a2ea296ae066bd814abff4fe47875f6ed290e4ab6936f"], "id":12}' -H "Content-Type: application/json"
+	```
+	得到结果:
+	```
+	{
+　　"jsonrpc":"2.0",
+　　"id":12,
+　　"result":{
+　　　　"blockHash":"0x8370992ac128ad2e4f7bac28ecec90f93749662927983ab4f1310d85583790c0",
+　　　　"blockNumber":"0x50f837",
+　　　　"from":"0xf0614d9129d51e4e4a217e45133784e94b896a5f",
+　　　　"gas":"0xd004",
+　　　　"gasPrice":"0x12a05f200",
+　　　　"hash":"0xb60e98d5525336b3970dfe23023912ac7bbe868f068d0ebe4a53ee719e7e539c",
+　　　　"input":"0xa9059cbb000000000000000000000000daed26203878c9bf130fa2530d19c18bf3a8421d00000000000000000000000000000000000000000000158be0e8d1653c180000",
+　　　　"nonce":"0xcf",
+　　　　"to":"0x80fb784b7ed66730e8b1dbd9820afd29931aab03",
+　　　　"transactionIndex":"0x25",
+　　　　"value":"0x0",
+　　　　"v":"0x26",
+　　　　"r":"0x5082eb17322fb326256e16e66349b859f606a9cca8f1a28578070bbbe1e465da",
+　　　　"s":"0x335cea67b6c6b80bf0c9273bf1ee67dc04d9a1d9e2c208fec327db7d27b745bb"
+　　}
+}
+	```
+	上面这次交易比较特殊，0x80fb784b7ed66730e8b1dbd9820afd29931aab03这个地址是一个合约地址，该地址下保存有代币自定义的协议，input中为具体的指令hash、接收的token账户、代币数量。
+	* 在input中，前4个字节（8个16进制数）为方法名sha3编码之后的前4个字节（8个16进制数）
+	* 在input中，需要将40个16进制数前面填充24个0，总共64个16进制数
+	* 将数量转化成16进制，填充0得到64个16进制
+* geth 上智能合约相关的操作
+	* 遵循 ERC20 的 Token 实际上就是用各自的方案实现了同一组 function；ERC20 看起来就像 Java 中的 interface。
+	* eth_call 方法，在input（有的地方叫data）参数中放入经过 ABI（application binary interface） encode 的方法。
+
+
