--- a/_posts/2017-08-28-DNS知识点.md
+++ b/_posts/2017-08-28-DNS知识点.md
@@ -12,13 +12,6 @@ tags:
 ---
 
 #### 基本概念
-
-* 主机名
-
-  www.baidu.com就是一个常见的网站主机名，这个名称被称为：FQDN(Full Qualified Domain Name)
-
-  > 注意主机名和域名是不同的：www.baidu.com是主机名，baidu.com是域名
-
 * DNS 
 
   Domain Name Service - 域名解析服务
@@ -94,6 +87,8 @@ tags:
 
 * 先查hosts文件
 * 若没有，查本地DNS缓存
+  * mac 下清理自己的 DNS 缓存
+  > sudo dscacheutil -flushcache; sudo killall -HUP mDNSResponder; say DNS cache flushed;
 * 若没有，再查DNS服务器
   * 先查DNS服务器的本地DNS缓存
   * 若没有，再查DNS服务器的解析库
