--- a/_posts/2018-01-24-MySQL 归纳.md
+++ b/_posts/2018-01-24-MySQL 归纳.md
@@ -36,6 +36,20 @@ GRANT ALL ON *.* TO vee@localhost;
 ALTER TABLE `t_user` ADD unique(`username`);
 ```
 
+* 备份数据
+> mysqldump --databases [DB_NAME] > [FILE_NAME].sql
+
+* 导入
+> mysql -u -p [DB_NAME] < [FILE_NAME].sql
+
+* 查看字符集
+	* 查看服务器和数据库字符集
+		> show variables like '%char%';
+	* 查看 Table 字符集
+	 	> show table status from sqlstudy_db like '%[TableName]%';
+ 	* 查看数据列字符集
+ 		> show full columns from [TableName]; 
+
 * 修改 Table 字符集
 	```
 	ALTER TABLE tbl_name CONVERT TO CHARACTER SET character_name [COLLATE ...]
@@ -45,7 +59,7 @@ ALTER TABLE `t_user` ADD unique(`username`);
 
 * 在创建 Database 的时候就指定字符集
 	```
-	CREATE DATABASE mydatabase CHARACTER SET utf8 COLLATE utf8_general_ci;
+	CREATE DATABASE IF NOT EXIST mydatabase CHARACTER SET utf8 COLLATE utf8_general_ci;
 	```
 
 * 查询某张 Table 的记录条数
