--- a/_posts/2018-03-23-Golang 归纳.md
+++ b/_posts/2018-03-23-Golang 归纳.md
@@ -19,3 +19,19 @@ var ip = flag.Int("flagname", 1234, "help message for flagname")
 ```
 * 通过flag.XxxVar绑定
 * 通过flag.Var绑定
+
+
+#### CandyBox 模式
+* 登录之后进入到一个空投项目页，包含5种获取Token的渠道
+ 	* 任务积分
+ 		- 顶栏有绑定 github\ twitter \ reddit \ youtobe \ linkedin 的图标链接，绑定 CandyBox 与 各个平台的账号
+ 		- 当前账号获取的积分（最终会根据积分权重，发放 Token 奖励）
+ 		- 奖励池和奖励说明
+ 		- 任务列表（标明任务预期积分，平台直达链接）
+ 		- 完成之后需要用户主动点领取积分奖励，任务完成判断正确性一般
+ 	* 影响力积分
+ 	  	- 自己去发布邀请链接邀请人来注册
+	* 利息奖励
+		- 代币放着不提不卖，每天生息
+	* 周边活动奖励
+	* 转账挖矿
