--- a/_posts/2018-01-24-MySQL 归纳.md
+++ b/_posts/2018-01-24-MySQL 归纳.md
@@ -16,6 +16,24 @@ sudo apt-get update
 sudo apt-get install mysql-server
 ```
 
+* YUM 
+```
+// 下载yum对应的mysql源
+wget https://dev.mysql.com/get/mysql80-community-release-el7-1.noarch.rpm
+
+sudo rpm -Uvh xxxxx.rpm
+
+// 查看 yum 中包含的源，选择下载的源
+yum repolist all | grep mysql
+
+sudo yum-config-manager --disable mysql80-community
+
+sudo yum-config-manager --enable mysql57-community
+
+sudo yum install mysql-community-server
+
+```
+
 * 修改root密码
 ```
 UPDATE mysql.user SET Password=PASSWORD('MyNewPass') WHERE User='root';
