--- a/_posts/2017-08-24-网络协议知识点.md
+++ b/_posts/2017-08-24-网络协议知识点.md
@@ -31,7 +31,7 @@ OSI 七层模型
 
 ##### Socket 是啥
 
-> 实际上Socket是对TCP/IP协议的封装，Socket本身不是协议，而是一个调用接口（API），对网络纠错、包大小、包重传等进行了封装。通过Socket，我们才能使用TCP/IP协议。实际上Socket和TCP/IP没有必然的联系。Socket对TCP/IP协议进行了抽象，从而形成了我们知道的一些最常用的接口，比如listen、accept、send、read和write等等。
+> 实际上Socket是对TCP/IP协议的封装，Socket本身不是协议，而是一组接口，对网络纠错、包大小、包重传等进行了封装。通过Socket，我们才能使用TCP/IP协议。实际上Socket和TCP/IP没有必然的联系。Socket对TCP/IP协议进行了抽象，从而形成了我们知道的一些最常用的接口，比如listen、accept、send、read和write等等。
 
 ##### Socket建立网络连接的过程
 
